src/stylesheets/Header.scss
@import './Variables.scss';

header {
  display: flex;
  justify-content: center;
  margin: 0;
  position: fixed;
  background-color: white;
  height: 3.5em;
  width: 100%;
  z-index: 10;
  color: $color-button--dark;
  box-shadow: 0px 0px 15px rgba($color-text--light, .25);
}

.header_wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.h-left, .h-right {
  display: flex;
}

.h-logo {
  height: 2em;
}

label {
  position: sticky;
  display: inherit;
  padding-right: 0;
}

label:hover {
  cursor: pointer;
}

#hamburger-list {
  display: none;

  & a {
    margin-left: 1em;
  }
}

#checkbox {
  display: none;
}

#menuToggle {
  display: block;
  position: relative;

  z-index: 1;

  -webkit-user-select: none;
  user-select: none;

  & a {
    text-decoration: none;
    color: #232323;

    transition: color 0.3s ease;
  }
}

#menuToggle input {
  display: block;
  width: 21px;
  height: 17px;
  position: absolute;

  cursor: pointer;

  opacity: 0;
  z-index: 2;

  -webkit-touch-callout: none;
}

#menuToggle span {
  display: block;
  width: 20px;
  height: 2px;
  margin-bottom: 5px;
  position: relative;

  background: $color-button--dark;
  border-radius: 3px;

  z-index: 1;

  transform-origin: 4px 0px;

  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
  background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
  opacity 0.55s ease;
}

#menuToggle span:first-child {
  transform-origin: 0% 0%;
}

#menuToggle span:nth-last-child(2) {
  transform-origin: 0% 100%;
}

#menuToggle input:checked ~ span {
  opacity: 1;
  transform: rotate(45deg) translate(1px, 3px);
  background: #232323;
}

#menuToggle input:checked ~ span:nth-last-child(3) {
  opacity: 0;
  transform: rotate(0deg) scale(0.2, 0.2);
}

#menuToggle input:checked ~ span:nth-last-child(2) {
  transform: rotate(-45deg) translate(0, -1px);
}

#menu {
  position: absolute;
  left: 100%;
  width: 250px;
  padding: 30px;
  border-radius: 5px;

  background: #ededed;
  list-style-type: none;
  -webkit-font-smoothing: antialiased;
  box-shadow: 0px 5px 15px rgba($color-text--light, .25);

  transform-origin: 0% 0%;
  transform: translateX(10%);

  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);

}

.menu_item {
  margin-bottom: 2em;

  &:last-child {
    margin-bottom: 0;
  }
}

#menuToggle input:checked ~ ul {
  transform: translateX(-50%);
}


@media screen and (min-width: 550px) { /* Maximale Headerlänge */
  label, #menuToggle {
    display: none;
  }

  #hamburger-list {
    display: flex;
    align-items: center;
  }

}

